# sprint-math-games-9th-grade-quizmasters

./: .gitignore  README.md  premake5.lua
BlackJack/: CMakeLists.txt
BlackJack/lib/: Deck.h  app.h  gameMenu.h  mainMenu.h  precompile.h
BlackJack/src/: Deck.cpp  app.cpp  gameMenu.cpp  main.cpp  mainMenu.cpp
Presenting/: Documentation Quiz Masters.docx  README.md  quiz masters.pptx
Scrum Trainer/: quiz masters.pptx
Sprites/: Start button.ase
Sprites/Main menu/: Menu text.ase
